--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -8,7 +8,7 @@
 .LoginBox {
   width: 500px;
   height: 750px;
-  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.08), 0 0 12px 0 rgba(5, 2, 2, 0.12);;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08), 0 8px 12px 0 rgba(5, 2, 2, 0.12);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,24 +30,30 @@
 }
 
 .register {
-  position: relative;
-  height: 80px;
-  /* margin-top: 25px; */
+  margin-top: 70px;
   text-align: center;
-}
-/* .register a h3 {
-  margin: 0 auto;
-} */
-.register a{
-  margin: 0;
-  position: absolute;
-  /* margin: 0; */
-  top: 50%;
-  transform: translateX(-50%);
 }
 
 .register_button {
   text-decoration: none;
+}
+
+@keyframes shakeframe {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
+}
+.shake {
+  animation: shakeframe 0.2s;
 }
 
 .FieldBox {
@@ -59,5 +65,7 @@
 
 .LoginButton {
   margin-top: 20px;
-  width: 100px;
+  width: 45px;
 }
+
+/*# sourceMappingURL=login.css.map */
