--- a/src/styles/register.module.scss
+++ b/src/styles/register.module.scss
@@ -1,19 +1,13 @@
-.PageContainer {
-    height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.LoginBox {
-    width: 500px;
-    height: 750px;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08),0 8px 12px 0 rgba(5, 2, 2, 0.12);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .WelcomeField{
     text-align: center;
+}
+
+.FieldBox {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .UserNameField {
     width: 300px;
@@ -28,26 +22,11 @@
     margin-top: 70px;
     text-align: center;
 }
-.register_button{
-    text-decoration: none;
-}
-
-// .mainLoginInput::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */ todo
-//     font-family: 'myFont', Arial, Helvetica, sans-serif;
-//     opacity: 1; /* Firefox */
-//   }
-.ErrorMessage {
-    // display: none;
-}
-
-.FieldBox {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 .LoginButton {
     margin-top: 20px;
     width: 45px;
+}
+
+@media screen and (max-width: 900px) and (min-width: 500px) {
+    
 }
