--- a/src/styles/formcontainer.css
+++ b/src/styles/formcontainer.css
@@ -14,51 +14,17 @@
   align-items: center;
 }
 
-.WelcomeField {
-  text-align: center;
-}
-
-.UserNameField {
-  width: 300px;
-  height: 32px;
-}
-
-.PasswordField {
-  width: 300px;
-  margin-top: 10px;
-  height: 32px;
-}
-
-.register {
-  margin-top: 70px;
-  text-align: center;
-}
-
-.register_button {
-  text-decoration: none;
-}
-
-.FieldBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.LoginButton {
-  margin-top: 20px;
-  width: 45px;
-}
-@media screen and (max-width: 980px) and (min-width: 400px) {
+@media screen and (max-width: 800px) and (min-width: 400px) {
   .LoginBox {
     width: 500px;
     height: 750px;
     border: 0;
     display: flex;
-    /* box-shadow: none; */
+    box-shadow: none;
     justify-content: center;
     align-items: center;
   }
 }
+
 
 /*# sourceMappingURL=formcontainer.css.map */
